# dbx

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  README.zh-CN.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.cargo/: config.toml
.github/scripts/: set-release-version.mjs  sync-changelog.mjs
.github/workflows/: ci.yml  release-cache.yml  release.yml  tauri-build.yml
apps/desktop/public/fonts/: FONTS-LICENSE.txt
apps/desktop/src/: App.vue
apps/desktop/src/composables/: useAppUpdater.ts  useDataGridActions.ts  useDataGridColumnResize.ts  useDataGridEditor.ts  useDataGridExport.ts  useDialogSources.ts  useFlatTree.ts  useTabScroll.ts  useToast.ts
apps/desktop/src/lib/: ai.ts  aiAgentLoop.ts  aiAgentPlan.ts  aiMessageRender.ts  aiSqlExecutionPolicy.ts  api.ts  appTheme.ts  binaryCellDownload.ts  canvasDataGridRenderer.ts  cellDetailPresentation.ts  codemirrorTrimmedSelectionLayer.ts  connectionAttemptTimeout.ts  connectionUrl.ts  dataGridCellCoercion.ts  dataGridPagination.ts  dataGridPaintTheme.ts  dataGridSaveUi.ts  databaseCapabilitySets.ts  databaseFeatureSupport.ts  dbeaverImport.ts  debugLog.ts  editorThemes.ts  explainPlan.ts  geometryPreview.ts  http.ts  keyboardShortcuts.ts  navicatImport.ts  objectRenameSql.ts  redisCommandCompletion.ts  redisKeyTree.ts  redisValuePresentation.ts  shortcutRegistry.ts  sidebarTreeItemLayout.ts  sqlCompletion.ts  sqlFormatterConfig.ts  sqlSemanticDiagnostics.ts  sqlStatementSelection.ts  tableStructureCapabilities.ts  tableStructureEditorSql.ts  tableStructureEditorState.ts  (+2 more)
apps/desktop/src/stores/: connectionStore.ts  queryStore.ts  savedSqlStore.ts  settingsStore.ts
apps/desktop/src/styles/: globals.css
crates/dbx-core/: Cargo.toml
crates/dbx-core/assets/: database-drivers.manifest.json
crates/dbx-core/src/: agent_catalog.rs  agent_events.rs  agent_loop.rs  agent_tools.rs  ai.rs  connection.rs  connection_secrets.rs  data_grid_sql.rs  database_export.rs  db_admin_sql.rs  jdbc.rs  lib.rs  process.rs  query.rs  query_execution_sql.rs  query_result_sql.rs  redis_ops.rs  schema.rs  sql_file_import.rs  table_export.rs  transfer.rs  update.rs
crates/dbx-core/tests/: database_capabilities.rs  live_postgres_network.rs  live_postgres_transfer.rs
crates/dbx-web/: Cargo.toml
crates/dbx-web/src/: main.rs  state.rs
crates/dbx-web/src/routes/: ai.rs  connection.rs  query.rs  redis.rs  schema.rs  sql_file.rs  transfer.rs
deploy/1panel/: README.md  data.yml
docs/app/[lang]/: page.tsx
docs/components/: DocsSidebarFooter.tsx
docs/components/landing/: ChangelogList.tsx  InstallTabs.tsx  LandingNav.tsx
docs/content/docs/: getting-started.cn.mdx  getting-started.mdx  mcp.cn.mdx  mcp.mdx
docs/design-system/: AGENT-GUIDE.md  DESIGN-SYSTEM.md  colors.html  components.html  export.html  index.html  motion.html  settings-preview.html  spacing.html  states.html  theming.html  tokens.css  tokens.json  typography.html
docs/design-system/ds/: components.html  export.html  index.html  theming.html  tokens.css  tokens.json  typography.html
docs/lib/: changelog.ts  downloadLinks.ts  latestRelease.ts
mcp/: package.json  server.json
mcp/src/: database.ts  index.ts
plugins/jdbc/: manifest.json  pom.xml
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: ai.rs  app_settings.rs  connection.rs  mcp_bridge.rs  query.rs  redis_cmd.rs  schema.rs  sql_file.rs  transfer.rs
src/components/editor/: QueryHistory.vue
src/components/grid/: DataGrid.vue
src/components/sql-file/: SqlFileExecutionDialog.vue
src/i18n/locales/: en.ts  es.ts  zh-CN.ts
src/lib/: databaseCapabilities.ts  historyAiAnalysis.ts
tests/: historyAiAnalysis.test.ts
(+117 files in other folders)
