[workspace]
resolver = "2"
members = ["src-tauri", "crates/dbx-core", "crates/dbx-web"]

[patch.crates-io]
tokio-postgres = { git = "https://github.com/t8y2/tokio-postgres-gaussdb.git", branch = "master" }
postgres-types = { git = "https://github.com/t8y2/tokio-postgres-gaussdb.git", branch = "master" }
postgres-protocol = { git = "https://github.com/t8y2/tokio-postgres-gaussdb.git", branch = "master" }
# Temporary compatibility patch for MySQL accounts using the deprecated
# sha256_password auth plugin. Remove after upstream support lands.
mysql_async = { git = "https://github.com/t8y2/mysql_async.git", rev = "7b565fbe76a168828189f7b98fe3b1989344c54e" }
mysql_common = { git = "https://github.com/t8y2/rust_mysql_common.git", rev = "5b30d4912ebb23728f1196b2b9eb928eebb73f92" }

[profile.release]
panic = "abort"
strip = true
# Thin, not fat, LTO: the fat-LTO final link re-optimizes every dependency's
# bitcode single-threaded — 10-30 min per release platform that no build cache
# can absorb. Thin LTO parallelizes that step for a few percent of binary size.
lto = "thin"
codegen-units = 1
opt-level = "s"

# Dev disk-usage controls. The debug `target/` is dominated by DWARF debug info
# baked into every dependency (duckdb, tiberius, mongodb, …), which you almost
# never step into. Stripping debuginfo from dependencies shrinks target/ a lot
# while keeping full debuggability for the workspace's own crates.
[profile.dev.package."*"]
debug = false

# Workspace crates keep line tables (file:line in panics/backtraces) without the
# full DWARF that bloats artifacts. Use `debug = true` here if you need a stepping
# debugger on dbx-core/dbx-web/src-tauri.
[profile.dev]
debug = "line-tables-only"
