[package]
name = "dbx"
version = "0.5.33"
description = "Open-source database management tool"
authors = ["skyler"]
license = "Apache-2.0"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "dbx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-fs = "2.5.0"
tauri-plugin-single-instance = "2.4.2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-window-state = "2"
rustls = { version = "0.23", features = ["aws-lc-rs"] }
tokio-util = { version = "0.7", features = ["compat"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
dbx-core = { path = "../crates/dbx-core" }
tauri-plugin-clipboard-manager = "2.3.2"
