[package]
name = "dbx-web"
version = "1.0.4"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "dbx-web"
path = "src/main.rs"

[dependencies]
dbx-core = { path = "../dbx-core" }
axum = { version = "0.8", features = ["multipart"] }
tower-http = { version = "0.6", features = ["cors", "fs", "compression-gzip", "trace"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
argon2 = "0.5"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
async-stream = "0.3"
futures = "0.3"
rustls = { version = "0.23", features = ["aws-lc-rs"] }
tokio-util = "0.7"
aes-gcm = "0.10"
base64 = "0.22"
pbkdf2 = "0.12"
sha2 = "0.10"
